# dxvk-native-branches

./: meson.build
src/d3d10/: d3d10.def  d3d10.ver  d3d10_1.def  d3d10_1.ver  d3d10core.def  d3d10core.ver  meson.build
src/d3d11/: d3d11.def  d3d11.ver  meson.build
src/d3d9/: d3d9.def  d3d9.ver  meson.build
src/dxgi/: dxgi.def  dxgi.ver  meson.build
